src/styles/app.scss
@import "normalize-css/normalize";

$primary-color: #BBDD4D;
$header-height: 60px;
$light-grey: #ddd;

*, *:before, *:after {
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  box-sizing: border-box;
}

body {
  font: normal 400 11px 'Gotham SSm A', 'Gotham SSm B', sans-serif;
  display: flex;
  flex-direction: column;
}

body, html {
  height: 100%;
}

p {
  font-size: 14px;
  line-height: 22px;
  color: #999;
  letter-spacing: 0.2px;
  margin: 15px 0 0 0;

  a {
    text-decoration: none;
    color: inherit;
    border-bottom: 1px solid lighten($light-grey, 3%);
    padding-bottom: 1px;

    &:hover {
      color: $primary-color;
      border-color: lighten($primary-color, 20%);
    }
  }
}

.container {
  padding: 0 20px;
  display: flex;
  width: 100%;
}

div[ng-view] {
  overflow: auto;
  display: flex;
  align-items: stretch;
  justify-content: center;
  flex: 1;
  position: absolute;
  top: $header-height;
  bottom: 0;
  width: 100%;

  &.ng-enter, &.ng-leave {
    transition: 0.2s linear opacity;
  }

  &.ng-enter, &.ng-leave.ng-leave-active {
    opacity: 0;
  }

  &.ng-leave, &.ng-enter.ng-enter-active {
    opacity: 1;
  }
}

header {
  height: $header-height;
  background: $primary-color;
  line-height: $header-height;

  h1 {
    font-size: 13px;
    text-transform: uppercase;
    margin: 0;
    color: darken($primary-color, 18%);
    font-weight: 500;
    letter-spacing: 0.8px;

    &:after {
      opacity: 0;
      display: inline-block;
      margin-left: 6px;
      content: "By Volume7";
      transition: opacity 0.2s ease-in-out;
      color: darken($primary-color, 12%);
    }

    &:hover:after {
      opacity: 1;
    }
  }

  nav {
    margin-left: auto;
    margin-top: 3px;
    
    #about-button {
      cursor: pointer;
      width: 12px;
    }

    #github-button {
      cursor: pointer;
      width: 19px;
      margin-right: 15px;
    }
  }
}

section.code-container {
  display: flex;
  flex-direction: column;
  flex: 1;

  .title-bar {
    height: $header-height/1.5;
    background: #F5F5F5;
    text-transform: uppercase;
    color: #999;
    letter-spacing: 0.8px;
    line-height: $header-height/1.5;
    font-weight: 500;
    margin-bottom: 20px;
  }

  &#input {
    #clear {
      cursor: pointer;
      display: block;
      margin-left: auto;
      width: 11px;
      height: 11px;
      background-image: url('/assets/images/clear.svg');
      background-repeat: no-repeat;
      margin-top: ($header-height/1.5/2)-5; // Center close icon

      &:hover {
        opacity: 0.8;
      }
    }
  }

  &#output {
    border-left: 1px solid $light-grey;
  }

  .ace_editor {
    flex: 1;

    .ace_gutter {
      background: white !important;
      color: darken($light-grey, 5%);
      width: 65px !important;

      .ace_gutter-layer {
        width: 40px !important;
      }
    }

    .ace_scroller {

      &.ace_scroll-left {
        box-shadow: none;
        border-left: 1px solid lighten($light-grey, 5%);
      }
    }

    .ace_bracket, .ace_hidden-cursors {
      display: none;
    }
  }
}

section#about {
  flex: 1;
  display: flex;
  flex-direction: column;
  max-width: 600px;
  padding: 10vh 3vh;

  .info-block {
    flex: 1 1;
    text-align: center;
    display: flex;
    flex-direction: column;
    justify-content: center;

    h2 {
      font-size: 18px;
      color: #666;
      line-height: 22px;
      letter-spacing: 0.2px;
      margin: 0;
      font-weight: 400;
    }
  }
}

